--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,14 @@
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<mat-toolbar color="primary">
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+     <mat-icon>menu</mat-icon>
+   </button>
+   <span class="example-spacer">My App</span>
+   <a mat-button  routerLink = "/home">Home</a>
+   <a mat-button  routerLink = "/services">Services</a>
+   <a mat-button  target="_blank">Contact</a>
+
+   <a mat-button mat-raised-button color="accent" target="_blank">SignIn</a>
+ </mat-toolbar>
+
+ <div class="container"><router-outlet></router-outlet></div>
+
