fetch data from api and service class added

--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -7,4 +7,18 @@
 <input type="text" [(ngModel)]="username"/>
 <h2>Welcome {{username}}</h2>
 
+<button (click)="fetchusers()">Fetch</button>
+<h2>API DATA</h2>
+
+<ul>
+    <li *ngFor="let user of users">{{user.name}}</li>
+</ul>
+<table>
+    <tr><th>Name</th>
+        <th>Email</th></tr>
+<tr>
+  <td *ngFor="let user of users">{{user.name}}</td>
+  <td *ngFor="let user of users">{{user.email}}</td>
+  </tr>
+</table>
 
